--- a/Inconspicuous Basic/Post-Template.css
+++ b/Inconspicuous Basic/Post-Template.css
@@ -103,6 +103,11 @@
   font-weight: 400;
   src: url(fonts/KOMTITT_.ttf);
 }@font-face {
+  font-family: 'KOMTIT__';
+  font-style: normal;
+  font-weight: 400;
+  src: url(fonts/KOMTIT__.ttf);
+}@font-face {
   font-family: 'AlegreSans-Regular';
   font-style: normal;
   font-weight: 400;
